Bug 1239889 part 1 - Throw if the animation target does not have a current document; r=heycam

This is just a temporary measure to avoid a failed assertion / crash until we
fix bug 1245748.